fix: AoM and DoB date formatting broken on mouse over (#2403)

--- a/src/extension/features/budget/date-of-money/index.css
+++ b/src/extension/features/budget/date-of-money/index.css
@@ -1,5 +1,4 @@
-.toolkit-days-of-buffering .budget-header-days-age {
-  color: #23b2ce;
+.budget-header-days .budget-header-days-age {
   min-width: 6em;
 }
 
